tests/errors/string_split_empty_sep_panics.ptt
use std/string

spark {
  parts is "abc".split("")
  yell(parts.len())
}
